# projeto-cc-av2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SPECS.md  main.py  pyproject.toml  smoke_test.ps1
experiments/: avaliacao.txt
notebooks/: 01_eda.ipynb
reports/: README.md
src/api/: main.py
src/data/: build_dataset.py  preparar_dados.py
src/features/: criar_features.py
src/models/: avaliar_modelo.py  treinar_modelo.py
src/monitoring/: detectar_drift.py
tests/: check_api.py  check_leakage.py  check_model.py  check_shapes.py  check_target.py  gerar_graficos.py
