[project]
name = "f1-top10-predictor"
version = "0.1.0"
description = "Predicts whether an F1 driver finishes in the top 10 using pre-race data only"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.3.3",
    "numpy==2.4.6",
    "scikit-learn==1.9.0",
    "joblib>=1.3",
    "mlflow==3.13.0",
    "fastapi==0.133.0",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "pyarrow==24.0.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
